# restaurant-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 04c54d21c29b_migration_2023_07_28_00_27_03.py
app/: graphql.py  main.py  routes.py
app/commons/: authorization.py
app/config/: exceptions.py  permissions.py  settings.py
app/database/: base.py  dependencies.py  mixins.py
app/dependencies/: database.py  graphql_context.py
app/models/: __init__.py  bills.py  licenses.py  menus.py  order_state.py  order_type.py  orders.py  payment_states.py  payment_types.py  payments.py  profiles.py  stores.py  surveys.py  tables.py  users.py
app/mutations/: __init__.py  healthcheck.py
app/queries/: __init__.py  healthcheck.py
app/schemas/: healthcheck.py
compose/develop/: Dockerfile  docker-compose.yml
compose/production/: Dockerfile  docker-compose.yml
scripts/: format.sh  generate_db_data.py  migrate.sh  start-dev.sh  start.sh
src/: celery.py  main.py  routes.py
src/application/commons/: pagination.py
src/application/dependencies/: services.py
src/application/services/: auth.py  menu_item.py  order.py  order_item.py  permission.py  rating.py  restaurant.py  user.py
src/domain/constants/: enums.py
src/domain/entities/: auth.py  category.py  menu_item.py  order.py  order_item.py  pagination.py  permission.py  rating.py  restaurant.py  user.py
src/domain/filters/: base.py  menu_item.py  order.py  order_item.py  rating.py  restaurant.py  user.py
src/domain/permissions/: base.py  user.py
src/domain/repositories/: menu_item.py  order.py  order_item.py  permission.py  rating.py  restaurant.py  user.py
src/domain/utils/: jwt.py  password.py
src/infraestructure/dependencies/: repositories.py  services.py
src/infraestructure/utils/: jwt.py  password.py  permission.py
tests/: conftest.py
tests/factories/: base_factory.py  category_factory.py  menu_item_factory.py  order_factory.py  order_item_factory.py  rating_factory.py  restaurant_factory.py  user_factory.py
tests/infraestructure/dependencies/: test_repositories.py  (+1 more)
(+32 files in other folders)
