[project]
name = "restaurant-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "fastapi[standard]>=0.115.6",
    "psycopg[binary,pool]>=3.2.3",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.3",
    "sqlalchemy>=2.0.36",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]
